Fix SonarCloud code smell: replace Collectors.toList() with Stream.toList()